anypoint-connector-devkit/v/3.5/connector-project-structure.adoc
= 连接器项目结构

本文档介绍在 link:/anypoint-connector-devkit/v/3.5/creating-an-anypoint-connector-project[创建一个Anypoint™连接器项目]之后为您生成的文件夹结构和文件。

== 假设

本文档假设您已经 link:/anypoint-connector-devkit/v/3.5/creating-an-anypoint-connector-project[创建一个新的连接器项目]，并且在Eclipse或Mule Studio中，您的连接器项目目录与以下屏幕截图类似。

image:barn-connector-screenshot.png[谷仓连接器屏幕截图]

== 源文件夹

*Source Folder*收集最终构建目标文件夹所需的所有输入。您运行的第一个Maven命令使用Mule连接器原型在源文件夹中生成一个框架，该框架包含下表中描述的四条路径。

image:src-main-java-sc.png[SRC-主要的Java-SC]

[%header,cols="30s,70a"]
|===
| {夹{1}}说明
| `src/main/java`  |包含连接器的源Java文件，包括连接器的骨架Java文件。在添加其他类时，项目将它们存储在此文件夹中。
| `src/main/resources`  |包含您的连接器访问的非代码资源。最初创建项目时，该文件夹为空。
| `src/test/java`  |包含连接器测试文件的Java源代码，包括骨架JUnit测试用例。
| `src/test/resources`  |包含您的测试访问的非代码资源。该文件夹包含用于运行测试的骨架Mule配置文件。
|===

=== 连接器类

打开`src/main/java/org/mule/modules/barn/BarnConnector.java`文件。该类定义连接器的主类，并包含重要的`@Connector`注释。

image:connector-class-sc.png[连接器级-SC]

请注意，DevKit已经创建了一个类和几个方法，并用*annotations*标记了它们。注释告诉Mule如何以特定的，预定义的方式调用和处理你的类，方法或参数。他们是你需要管理的与Mule联系的唯一联系人。

`@Connector`

应用于连接器类本身的连接器的顶级注释是`@Connector`。该注释通知DevKit Java类将用作连接器。

[source, code, linenums]
----
/**
 * Anypoint Connector
 *
 * @author MuleSoft, Inc.
 */
@Connector(name="barn", schemaVersion="1.0", friendlyName="Barn", minMuleVersion="3.5")
public class BarnConnector
{
    /**
     * Configurable
     */
    @Configurable
    private String myProperty;
    ... 
}
----


`@Connector`注释包含多个参数，其中一些参数由原型自动生成，例如`name`和`schemaVersion`。您可以按照下表中所述定义其他参数。

[source, java, linenums]
----
@Connector(name="barn", schemaVersion="1.0", friendlyName="Barn", minMuleVersion="3.5")
public class BarnConnector
----

[%header%autowidth.spread]
|===
|注释类型元素 |描述 |是否必需？ |默认值
| `name`  |连接器的名称。此值必须是简单的字符串，不能有空格。  |是| 
| `schemaVersion`  |由DevKit生成的架构版本。 |否| `1.0-SNAPSHOT`
| `friendlyName`  |这是连接器的人类可读名称。它可以包含空格。 Mule仅将它用于标记Studio调色板中的连接器。 |是| 
| `description`  |描述连接器及其操作的较长字符串。 Mule Studio将说明显示为工具提示。 |否| 
| `namespace`  |连接器的名称空间。 |否| `+http://www.mulesoft.org/schema/mule/name+`
| `schemaLocation`  |写入`spring.schemas`文件的模式文件的位置。 |否 | `+http://www.mulesoft.org/schema/mule/name/schemaVersion/mule-name.xsd+` +
+
和：
+
`+http://www.mulesoft.org/schema/mule/name/current/mule-name.xsd+`
| *`minMuleVersion`*  |连接器可以使用的最小Mule版本。 Mule会在运行时检查版本，如果版本不兼容会引发错误。 |否 |最新的稳定Mule运行时版本
|===

以下限制适用于`@Connector`注释。

*  `@Connector`不能应用于接口
*  `@Connector`不能应用于最终类
*  `@Connector`不能应用于参数化类
*  `@Connector`不能应用于非公共类
具有`@Connector`的类* 必须只包含一个用`@Connect`注释的方法
具有`@Connector`的类* 必须只包含一个用`@Disconnect` +注释的方法

== 连接器测试

打开`src/test/java/org/mule/modules/barn/BarnConnectorTest.java`文件。

image:test-java-sc.png[测试的java-SC]

请注意，DevKit已经创建了一个类，几个方法和一个可配置属性，并用注释标记了它们。在本课程的方法中，您可以编写适合您测试需求的自己的测试。每次编译代码时都会评估这些测试。您也可以通过从控制台运行以下Maven命令来运行这些测试，而无需构建连接器。

[source, code, linenums]
----
mvn test
----

有关为连接器开发测试的更多详细信息，请参阅 link:/anypoint-connector-devkit/v/3.5/developing-devkit-connector-tests[开发DevKit连接器测试]。

==  POM文件

基于用于创建项目的原型，Maven生成项目对象模型（POM）文件。 Maven使用`pom.xml`文件来跟踪构建项目所需的所有依赖项，包括依赖项的版本号和位置。您可能必须在连接器开发过程中将项目添加到POM文件，以便拉入其他库并向构建过程添加步骤。

image:pom-sc.png[POM-SC]

有关POM文件角色的更多详细信息，请参阅 link:http://maven.apache.org/pom.html[在maven.apache.org上的POM参考]。

== 图标文件夹

图标文件夹包含Mule Studio用来在调色板和画布上表示连接器的图像。您可以轻松地将这些文件与您选择的其他文件交换。你也可以从其中Mule获取它们的 link:/anypoint-connector-devkit/v/3.5/defining-connector-attributes#customizing-attributes-look-and-feel[修改文件夹]。

image:icons-sc.png[图标-SC]

== 许可和自述文件

如果您决定与Mule社区共享您的连接器，那么您的项目将包含基本的许可协议，您的 link:/anypoint-connector-devkit/v/3.5/packaging-your-connector-for-release[随意更改]。使用`README`文件为用户提供有关连接器的初始信息。建议您也创建一个`CHANGELOG.md`文件来公开发行说明。这些文件以 link:https://help.github.com/articles/about-writing-and-formatting-on-github/[Github-Flavored降价]格式`(.md)`写入。

image:connector_license.png[connector_license]

== 目标文件夹

当构建过程成功完成时，如果`test`文件夹中定义的所有测试都通过，则Maven构建过程会在目标文件夹中创建多个构件。

image:target-sc.png[目标-SC]

如果您运行构建过程并且没有在包资源管理器中看到此文件夹，请右键单击项目名称，然后选择*Refresh*查看以下新元素：

image:updated-target-sc.png[更新的目标-SC]

*  `barn-connector-1.0-SNAPSHOT.jar`，连接器JAR
*  `barn-connector-1.0-SNAPSHOT.zip`，Mule插件，您可以将它放入Mule独立版的`plugins`目录
{（0）} `UpdateSite.zip`，您（或任何想要使用连接器的人）可以将文件导入Mule Studio以安装或更新连接器。

您也可以通过右键单击该项目来生成文档，然后选择*Anypoint Connector*> *Preview Documentation*。如果你这样做，目标文件夹也包含apidocs。这些是为您的连接器自动生成的安装说明，Javadoc和Mule API文档。

image:apidocs-sc.png[apidocs-SC] +

== 参考文档

构建还会为您的连接器自动生成Javadoc。 Maven生成的框架文件已包含占位符注释（包含在`/**`和`*/`之间），您可以进一步更新。在向连接器添加功能时，确保在代码中严格添加JavaDoc注释，因为Mule会在构建过程中自动将注释合并到自动生成的文档中。

[source, code, linenums]
----
/**
 * Custom processor that places an animal in the barn.
 *
 * {@sample.xml ../../../doc/barn-connector.xml.sample barn:putInBarn}
 *
 * @param animal Name of the animal to be place in the barn
 * @return returns processed message
 */
@Processor 
public String putInBarn(String animal) {
    return animal + " has been placed in the barn";
}
----

要预览此文档，请在Web浏览器中打开`target/apidocs/index.html`。

image:doc-index-sc.png[DOC指数-SC]

=== 文档最佳实践

DevKit强制评论你的代码。对于您编写的每种方法，请添加相应的注释部分，以便在构建连接器时立即记录连接器的功能。在这些注释部分中，列出注释`@param`和`@return`的方法的每个参数和每个输出。

请注意，在下面的示例中，DevKit将上述示例代码中的`@param`和`@return`内容拉入Javadoc，自动对其进行组织，格式化并包含额外的标准内容。

image:method-doc-sc.png[方法-DOC-SC]

== 另请参阅

*  *NEXT:*继续使用您的API的 link:/anypoint-connector-devkit/v/3.5/authentication[选择并实施您的验证]方法。
